--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
         "sequelize": "^6.23.0",
         "winston": "^3.8.2",
         "winston-daily-rotate-file": "^4.7.1"
+    },
+    "devDependencies": {
+        "prettier": "2.7.1"
     }
 }
